1.6.0
=====

(Kim Shepherd)
 - [DS-118] File preview link during submission leads to page not found
 - [DS-121] XMLUI Feedback form breaks with multiple hostnames
 - [DS-156] File description not available in XMLUI
 - [DS-198] File descriptions can not be removed/cleared in XMLUI
 - [DS-240] Item validityKey not complete

(Claudia Juergen)
 - [DS-188] Misspell exclude.type=indentifier in dstat.cfg
 - [DS-197] Deleting a primary bitstream does not clear the primary_bitstream_id on the bundle table
 - [DS-231] Missig file (just some obsolete use of index-all in the current documentation, corrected the docs)
 - [DS-248] Missing admin column in community table in database-schema.sql and update - community admin patch
 - Item Importer - documented the use of non-dc metadata during item import
 
(Ricardo Saraiva)
 - [DS-190] Portuguese (pt_PT) translation Messages.properties JSP-UI v1.5.2

(Stuart Lewis)
 - [DS-161] Bulk metadata editing
 - [DS-194] Give METS ingester configuration option to make use of collection templates
 - [DS-195] Allow the primary bitstream to be set in the item importer / exporter
 - [DS-196] METS exposed via OAI-PMH includes description.provenance information
 - [DS-200] SWORD module requires the X-Packaging header
 - [DS-204] New -zip option for item exporter and importer
 - [DS-209] Context.java turnOffAuthorisationSystem() can throw a NPE
 - [DS-212] NPE thrown during Harvest of non-items when visibility restriction is enabled
 - [DS-213] IPAuthentication extended to allow negative matching
 - [DS-216] Migrating items that use additional metadata schemas causes an NPE
 - [DS-219] Internal Server error - include login details of user
 - [DS-221] XMLUI 'current activity' recognises Google Chrome as Safari
 - [DS-242] Special groups shown for logged in user rather than for user being examined
 - [DS-250] Invalid identifiers are not escaped

(Larry Stone)
 - [DS-193] OAI RDF crosswalk fails when DC value is null